--- a/src/styles/swagger-overrides.css
+++ b/src/styles/swagger-overrides.css
@@ -5,3 +5,7 @@
 .swagger-ui .opblock .opblock-section-header {
         background: hsla(270, 2%, 19%, 0.3);
 }
+
+.swagger-ui input[type=text], .swagger-ui textarea {
+    color: #000000 !important;
+}
